@@ -1,3 +1,4 @@
+export("worksheetOrder<-")
 export(addStyle)
 export(addWorksheet)
 export(conditionalFormat)
@@ -31,6 +32,7 @@ export(setHeader)
 export(setRowHeights)
 export(sheets)
 export(showGridLines)
+export(worksheetOrder)
 export(write.xlsx)
 export(writeData)
 export(writeDataTable)
