@@ -220,6 +220,8 @@ addWorksheet <- function(wb, sheetName, gridLines = TRUE){
   if(nchar(sheetName) > 29)
     stop("sheetName too long! Max length is 28 characters.")
   
+  nSheets <- length(wb$worksheets)
+  
   ## Invalid XML characters
   sheetName <- replaceIllegalCharacters(sheetName)
   
@@ -1545,6 +1547,66 @@ showGridLines <- function(wb, sheet, showGridLines = FALSE){
   wb$worksheets[[sheet]]$sheetViews <- sv
   
 }
+
+
+
+
+
+#' @name worksheetOrder
+#' @title Order of worksheets in xlsx file
+#' @details This function does not reorder the worksheets within the workbook object, it simply
+#' shuffles the order when writing to file.
+#' @export
+#' @examples
+#' wb <- createWorkbook()
+#' addWorksheet(wb = wb, sheetName = "Sheet 1", gridLines=F)
+#' writeDataTable(wb = wb, sheet = 1, x = iris)
+#' 
+#' addWorksheet(wb = wb, sheetName = "mtcars (Sheet 2)", gridLines=F)
+#' writeData(wb = wb, sheet = 2, x = mtcars)
+#' 
+#' addWorksheet(wb = wb, sheetName = "Sheet 3", gridLines=F)
+#' writeData(wb = wb, sheet = 3, x = Formaldehyde)
+#' 
+#' worksheetOrder(wb)
+#' sheets(wb)
+#' worksheetOrder(wb) <- c(1,3,2) # switch position of sheets 2 & 3 
+#' writeData(wb, 2, 'This is still the "mtcars" worksheet', startCol = 15)
+#' worksheetOrder(wb)
+#' sheets(wb)
+#' 
+#' saveWorkbook(wb, "worksheetOrderExample.xlsx",  overwrite = TRUE)
+worksheetOrder <- function(wb){
+  
+  if(!"Workbook" %in% class(wb))
+    stop("Argument must be a Workbook.")
+  
+  
+  wb$sheetOrder
+}
+
+#' @rdname worksheetOrder
+#' @param wb A workbook object
+#' @param value Vector specifying order to write worksheets to file
+#' @export
+`worksheetOrder<-` <- function(wb, value) {
+  
+  if(!"Workbook" %in% class(wb))
+    stop("Argument must be a Workbook.")
+  
+  value <- unique(value)
+  if(length(value) != length(wb$worksheets))
+    stop(sprintf("Worksheet order must be same length as number of worksheets [%s]", length(wb$worksheets)))
+  
+  if(any(value > length(wb$worksheets)))
+    stop("Elements of order are greater than the number of worksheets")
+  
+  wb$sheetOrder <- wb$sheetOrder[value]
+  
+  invisible(wb)
+  
+}
+
 
 
 
